<?xml version="1.0"?>
<!-- Package format 3 according to http://www.ros.org/reps/rep-0149.html -->
<package format="3">
	<name>zed_multi_camera</name>
	<version>4.0.0</version>
	<description> This package is a tutorial showing how to configure a multi-camera system.</description>
	<maintainer email="support@stereolabs.com">STEREOLABS</maintainer>
	<license>Apache License 2.0</license>
	<url type="website">https://www.stereolabs.com/</url>
	<url type="repository">https://github.com/stereolabs/zed-ros2-wrapper</url>
	<url type="bugtracker">https://github.com/stereolabs/zed-ros2-wrapper/issues</url>
	<buildtool_depend>ament_cmake</buildtool_depend>
	<build_depend>ament_cmake_auto</build_depend>
	<depend>zed_wrapper</depend>
	<test_depend>ament_lint_auto</test_depend>
	<test_depend>ament_lint_common</test_depend>
	<test_depend>ament_cmake_clang_format</test_depend>
	<export>
		<build_type>ament_cmake</build_type>
	</export>
</package>
