<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema" ?>
<package format="3">
  <name>zed_robot_integration</name>
<version>5.2.0</version>
  <description>Scout Mini URDF with ZED Description</description>

  <author email="support@stereolabs.com">TODO</author>
  <maintainer email="support@stereolabs.com">TODO</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>ament_cmake_auto</build_depend>

  <exec_depend>zed_wrapper</exec_depend>
<exec_depend>zed_msgs</exec_depend>
  <exec_depend>scout_description</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
