<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>zed_ros2_wrapper_qa</name>
    <version>4.2.1</version>
    <description>zed_wrapper automatic qa tests</description>
    <maintainer email="support@stereolabs.com">STEREOLABS</maintainer>
    <license>Apache License 2.0</license>
    <url type="website">https://www.stereolabs.com/</url>
   
    <buildtool_depend>ament_cmake</buildtool_depend>
    <build_depend>ament_cmake_auto</build_depend>
    <build_depend>rclcpp</build_depend>
    <build_depend>rclcpp_components</build_depend>
    <build_depend>rcutils</build_depend>
    <build_depend>zed_msgs</build_depend>
    <exec_depend>rclcpp</exec_depend>
    <exec_depend>rclcpp_components</exec_depend>
    <exec_depend>rcutils</exec_depend>
    <test_depend>ament_cmake_copyright</test_depend>
    <test_depend>ament_cmake_cppcheck</test_depend>
    <test_depend>ament_cmake_lint_cmake</test_depend>
    <test_depend>ament_cmake_pep257</test_depend>
    <test_depend>ament_cmake_uncrustify</test_depend>
    <test_depend>ament_cmake_xmllint</test_depend>
    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>

